fix missing whitespace in mautic custom html

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1371,6 +1371,7 @@ a:active {
 .mauticform-freehtml {
 	margin-top: -0.5px;
 	font-size: 10px;
+	display: block;
 }
 
 #footer-1 .textwidget {
